--- a/.gitignore
+++ b/.gitignore
@@ -190,5 +190,5 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,jetbrains+all,visualstudiocode
 
-/vender
+/vendor
 composer.lock
